--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngrx/store": "^10.0.1",
     "@ngrx/store-devtools": "^10.0.1",
     "bootstrap": "^4.5.3",
+    "chromedriver": "^87.0.0",
     "jquery": "^3.5.1",
     "ngx-toastr": "^13.1.0",
     "popper.js": "^1.16.1",
